5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1635_2704.log
== SUBMITION (2019-04-10 14:26:52) 
-- CODE:
n= float(input("insira a nota do aluno: "))
b= input("vai receber bonificacao? ")

if(b=="s"):
	total= nota + (nota*10/100)
else:
	total = nota
	
print(total)
-- EXECUTION TIME:
0.104848
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 7, in <module>
    total = nota
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:27:14) 
-- CODE:
nota= float(input("insira a nota do aluno: "))
b= input("vai receber bonificacao?")

if(b=="s"):
	total= nota + (nota*10/100)
else:
	total = nota
	
print(total)
-- EXECUTION TIME:
0.143757
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:27:16) 
-- CODE:
nota= float(input("insira a nota do aluno: "))
b= input("vai receber bonificacao?")

if(b=="s"):
	total= nota + (nota*10/100)
else:
	total = nota
	
print(total)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:27:35) 
-- CODE:
nota= float(input("insira a nota do aluno: "))
b= input("vai receber bonificacao?")

if(b=="S"):
	total= nota + (nota*10/100)
else:
	total = nota
	
print(total)
-- EXECUTION TIME:
0.159254
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
